# csp-ml-pipeline

./: .env.sample  .gitignore  CLAUDE.md  INSTRUCTIONS.md  config.yaml  corp_action_config.yaml  pyproject.toml  requirements.txt
doc/: issue_2026-04-19.md
eval/: eval_classifier.py
pipeline/: __init__.py  a01_build_features.py  a02_collect_events.py  a03_filter_trades.py  a04_label_data.py  a05_merge_datasets.py  b01_train_winner.py  b02_score_winner.py  b03_train_tail.py  b04_score_tail.py  b13_train_tail_gex.py  b14_score_tail_gex.py
scripts/: backfill_rolling_windows.py  build_all_datasets.py  build_history_store.py  daily_stock_update.py  run_all_tail_runs.py  run_all_winner_runs.py
service/: __init__.py  constants.py  data_prepare.py  env_config.py  get_vix.py  nasdaq_earnings.py  option_metrics.py  preprocess.py  production_data.py  split_detector.py  stock_data_manager.py  table_store.py  tail_scoring.py  utils.py  winner_scoring.py
test/: test_data_ana.py  test_data_filtering.py  test_data_manipulation.py  test_data_prepare.py  test_diag.py  test_gex_ml_engine.py  test_load_symbol_prices.py  test_load_vix.py  test_option_metrics.py  test_pipeline_workflow.py  test_prepare.py  test_preprocess.py  test_price_manage.py  test_prod.py  test_refactor_verification.py  test_score.py  test_util.py  test_verification.py  test_winner_tail_scoring.py
