[project]
name = "csp-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy>=1.3.3",
    "cramjam==2.11.0",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "exchange-calendars>=4.13.2",
    "executing==2.2.0",
    "fastparquet>=2026.3.0",
    "fonttools==4.59.0",
    "frozendict==2.4.6",
    "fsspec==2025.7.0",
    "graphviz==0.21",
    "idna==3.10",
    "iniconfig==2.1.0",
    "ipykernel==6.30.1",
    "ipython>=9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "joblib==1.5.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "lightgbm>=4.6.0",
    "matplotlib==3.10.5",
    "matplotlib-inline==0.1.7",
    "multitasking==0.0.12",
    "nest-asyncio==1.6.0",
    "numpy>=2.4.4",
    "packaging==25.0",
    "pandas>=3.0.2",
    "parso==0.8.4",
    "peewee==3.18.2",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.51",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow>=23.0.1",
    "pycparser==2.22",
    "pydantic>=2.13.2",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml>=6.0.3",
    "pyzmq==27.0.1",
    "requests==2.32.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "selenium>=4.36.0",
    "six==1.17.0",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "tenacity>=9.1.4",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
    "webdriver-manager>=4.0.2",
    "websockets==15.0.1",
    "yfinance>=1.2.0",
]
